--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cool-ascii-faces": "^1.3.4",
     "express": "^4.17.1",
     "http-hash-router": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
