set up files for heroku

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon index.js"
+    "build": "cd client && npm run build",
+    "install-client":"cd client && npm run build",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
