--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cd client && npm run build",
-    "install-client":"cd client && npm run build",
+    "build": "cd client-react && npm run build",
+    "install-client":"cd client-react && npm run build",
     "heroku-postbuild": "npm run install-client && npm run build",
     "start": "node index.js"
   },
