--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd client-react && npm run build",
-    "install-client":"cd client-react && npm run build",
+    "install-client":"cd client-react && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
     "start": "node index.js"
   },
